| Summary: | ASTERISK-24097: Documentation - CHANNEL function help text missing 'linkedid' argument | ||
| Reporter: | Steven Wheeler (swheeler) | Labels: | |
| Date Opened: | 2014-07-22 15:30:56 | Date Closed: | 2016-01-17 13:50:51.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Documentation Functions/func_channel |
| Versions: | SVN 1.8.29.0 11.11.0 12.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Pretty much all in the summary. 'linkedid' is an available argument for the CHANNEL function. We should document it! | ||
| Comments: | By: Rusty Newton (rnewton) 2014-07-22 15:31:54.838-0500 Changing reporter to Steven Wheeler so he'll get credit as he reported this on the mailing list. I'm just creating the issue. By: Richard Mudgett (rmudgett) 2014-07-22 15:38:20.277-0500 Should also check to see if there are any other CHANNEL arguments missing documentation. By: Rusty Newton (rnewton) 2014-07-22 15:43:00.923-0500 +1 By: Rusty Newton (rnewton) 2016-01-14 09:34:59.189-0600 Turns out a few were undocumented... hangupsource R/W (Returns the channel responsible for the hangup) appname R (Returns the internal application name if available.) appdata R (Returns the application data if available.) exten R (Returns the extension for an outbound channel.) context R (Returns the context for an outbound channel.) channame R (Returns channel name on an outbound channel??) uniqueid R (Returns the uniqueid for the channel) linkedid R (Returns the linkedid. If it is not set then the uniqueid is returned.) Submitting a patch to Gerrit for all of those. I experimented with them to see what they do.. hopefully if I misunderstood then someone will comment in a review on Gerrit. | ||