funcs/func_channel.c
@@ -208,6 +208,30 @@ ASTERISK_REGISTER_FILE()
 						<para>R/W whether or not context tracing is enabled, only available
 						<emphasis>if CHANNEL_TRACE is defined</emphasis>.</para>
 					</enum>
+					<enum name="hangupsource">
+						<para>R/W returns the channel responsible for hangup.</para>
+					</enum>
+					<enum name="appname">
+						<para>R/O returns the internal application name.</para>
+					</enum>
+					<enum name="appdata">
+						<para>R/O returns the application data if available.</para>
+					</enum>
+					<enum name="exten">
+						<para>R/O returns the extension for an outbound channel.</para>
+					</enum>
+					<enum name="context">
+						<para>R/O returns the context for an outbound channel.</para>
+					</enum>
+					<enum name="channame">
+						<para>R/O returns the channel name for an outbound channel.</para>
+					</enum>
+					<enum name="uniqueid">
+						<para>R/O returns the channel uniqueid.</para>
+					</enum>
+					<enum name="linkedid">
+						<para>R/O returns the linkedid if available, otherwise returns the uniqueid.</para>
+					</enum>
 				</enumlist>
 				<para><emphasis>chan_sip</emphasis> provides the following additional options:</para>
 				<enumlist>
